--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
+    "util" : "",
     "discord.js": "11.0.x",
     "feedparser": "1.1.x",
     "html-to-text": "1.5.x",
